库存页面搜索条件修改

--- a/core/app/views/StockRecords/stockIndex.html
+++ b/core/app/views/StockRecords/stockIndex.html
@@ -30,7 +30,7 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" style="width:300px;" name="p.search" placeholder="sellingId or SKU" value="${p.search}">
+        <input type="text" style="width:300px;" name="p.search" placeholder="SKU,采购计划ID,FBA" value="${p.search}">
         <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
