创建入库单验证规则修改

--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -36,7 +36,7 @@
         </select>
 
         <select name="p.whouseId" class="inline">
-          <option value="0">仓库</option>
+          <option value="0">去往仓库</option>
         #{list items:whouses, as:'wh'}
           <option ${wh.id == p.whouseId ? 'selected' : ''} value="${wh.id}">${wh.name}</option>
         #{/list}
