--- a/core/app/views/ProcureUnits/index.html
+++ b/core/app/views/ProcureUnits/index.html
@@ -43,7 +43,7 @@
         </select>
 
         <select name="p.whouseId" class="inline">
-          <option value="0">仓库</option>
+          <option value="0">去往市场</option>
         #{list items:whouses, as:'wh'}
           <option ${wh.id == p.whouseId ? 'selected' : ''} value="${wh.id}">${wh.name}</option>
         #{/list}
