分拆采购计划，子采购计划需要填上交货时间和质检结果

--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -30,7 +30,7 @@
   <th><i class="icon-asterisk" style="color:red"></i>库存数量</th>
   <td>
     <input type="text" class="input-mini" name="newUnit.availableQty" id="planQty" placeholder="小于${unit.availableQty}"
-           data-max="${unit.availableQty}" required>
+           data-max="${unit.availableQty}" required autocomplete="off">
     <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
     <span class="add-on">箱</span>
   </td>
