--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -204,38 +204,37 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">仓库模块<b class="caret"></b></a>
             <ul class="dropdown-menu">
-                #{power.ck "whouses.index"}
-                  <li><a href="@{Whouses.index()}">仓库</a></li>
-                #{/power.ck}
-              <li class="divider"></li>
-                #{power.ck 'deliverplans.indexwhouse'}
-                  <li><a href="@{DeliverPlans.indexwhouse()}">出货单关联收货</a></li>
-                #{/power.ck}
                 #{power.ck "procures.indexwhouse"}
-                  <li><a href="@{ProcureUnits.indexWhouse()}">采购计划(仓库)</a></li>
+                  <li><a href="@{ProcureUnits.indexWhouse()}">采购计划</a></li>
+                #{/power.ck}
+                #{power.ck 'deliverplans.indexwhouse'}
+                  <li><a href="@{DeliverPlans.indexwhouse()}">收货</a></li>
                 #{/power.ck}
                 #{power.ck 'inbounds.index'}
-                  <li><a href="@{Inbounds.index()}">收货入库单</a></li>
-                #{/power.ck}
-                #{power.ck "outbounds.index"}
-                  <li><a href="@{Outbounds.index()}">出库单</a></li>
-                #{/power.ck}
-                #{power.ck 'refunds.index'}
-                  <li><a href="@{Refunds.index()}">退货单</a></li>
-                #{/power.ck}
-                #{power.ck "products.whouseattrs"}
-                  <li><a href="@{Products.whouseAttrs()}">产品</a></li>
-                #{/power.ck}
-                #{power.ck 'whouseitems.index'}
-                  <li><a href="@{StockRecords.stockIndex()}">库存</a></li>
-                #{/power.ck}
-                #{power.ck "stockrecords.index"}
-                  <li><a href="@{StockRecords.index()}">库存异动</a></li>
+                  <li><a href="@{Inbounds.index()}">质检入库</a></li>
                 #{/power.ck}
                 #{power.ck "refunds.unqualifiedindex"}
                   <li><a href="@{Refunds.unQualifiedIndex()}">不良品处理</a></li>
                 #{/power.ck}
-
+                #{power.ck 'refunds.index'}
+                  <li><a href="@{Refunds.index()}">退货</a></li>
+                #{/power.ck}
+                #{power.ck "outbounds.index"}
+                  <li><a href="@{Outbounds.index()}">出库</a></li>
+                #{/power.ck}
+                #{power.ck 'whouseitems.index'}
+                  <li><a href="@{StockRecords.stockIndex()}">库存管理</a></li>
+                #{/power.ck}
+                #{power.ck "stockrecords.index"}
+                  <li><a href="@{StockRecords.index()}">库存异动</a></li>
+                #{/power.ck}
+                #{power.ck "products.whouseattrs"}
+                  <li><a href="@{Products.whouseAttrs()}">产品</a></li>
+                #{/power.ck}
+              <li class="divider"></li>
+                #{power.ck "whouses.index"}
+                  <li><a href="@{Whouses.index()}">仓库</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
