调整库存增加 调整前字段

--- a/core/app/views/StockRecords/show.html
+++ b/core/app/views/StockRecords/show.html
@@ -33,8 +33,8 @@
         </td>
       </tr>
       <tr>
-        <th>当前库存</th>
-        <td><input type="text" value="${record?.unit.availableQty}" readonly></td>
+        <th>调整前库存</th>
+        <td><input type="text" value="${record?.currQty}" readonly></td>
         <th>调整类型</th>
         <td>
           <select name="record.category" readonly="readonly">
