--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -88,6 +88,7 @@
         <th>阶段</th>
         <th>抵达货代</th>
         <th>FBA</th>
+        <th>Detail</th>
       </tr>
         #{list items:dmt.applyUnit(), as:'procureUnit'}
             #{if procureUnit.isNeedPay}
@@ -104,7 +105,8 @@
           <td data-toggle="toggle" data-target="#unit_${pid}">
             <i class="icon-reorder"></i>
               #{if procureUnit.parent}
-                <i class="icon-retweet" style="color:${procureUnit.type.name()=='ProcureSplit'?'blue':'orange'}"></i>
+                <i class="icon-retweet" style="color:${procureUnit.type.name()=='ProcureSplit'?'blue':'orange'}"
+                   rel="tooltip" title="${procureUnit.type?.label()}"></i>
               #{/if}
           ${procureUnit.id}
           </td>
@@ -133,9 +135,12 @@
                 暂时还没有 FBA
               #{/else}
           </td>
+          <td>
+            <a href="@{ProcureUnits.detail(procureUnit.id)}#${procureUnit?.id}" target="_blank" class="btn btn-small btn-info">变更详情</a>
+          </td>
         </tr>
           <tr id="unit_${pid}" style="display:none">
-            <td colspan="9">
+            <td colspan="11">
               <div class="row-fluid">
                 <div class="span2">
                     #{if procureUnit.isNeedPay}
@@ -177,7 +182,6 @@
                           #{/else}
                       </div>
                     #{/power.ck}
-
                 </div>
                 <div class="span10">
                     #{if procureUnit.fees().size() > 0}
@@ -268,7 +272,7 @@
         <td rel='tooltip' title='汇总美金' class="usd"></td>
         <td rel='tooltip' title="汇总人民币" class="cny"></td>
         <td rel='tooltip' title="汇总其他未知币种" class="unknow"></td>
-        <td colspan="2"></td>
+        <td colspan="3"></td>
       </tr>
     </table>
   </div>
