--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -244,6 +244,8 @@
               #{/if}
               #{else }
                 <a href="@{ProcureUnits.editManual(unit.id)}" target="_blank" class="btn btn-small btn-primary">修改</a>
+                <a href="@{ProcureUnits.splitUnit(unit.id, false)}" target="_blank" class="btn btn-small" rel="tooltip"
+                   title="如样品，试用等操作">SKU分拆</a>
               #{/else}
               #{if unit.stage in [models.procure.ProcureUnit.STAGE.PLAN, models.procure.ProcureUnit.STAGE.DELIVERY]}
                 <a href="@{ProcureUnits.destroy(unit.id)}" data-method='DELETE' data-confirm="确认删除?" class="btn btn-small btn-danger">
@@ -252,11 +254,9 @@
               #{/if}
               #{power.ck "procures.dosplitunit"}
                 <a href="@{ProcureUnits.detail(unit.id)}#${unit?.id}" target="_blank" class="btn btn-small btn-info">变更详情</a>
-                  #{if unit.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
-                    <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning" target="_blank">采购分拆</a>
-                  #{/if}
-                  #{if unit.stage == models.procure.ProcureUnit.STAGE.IN_STORAGE}
-                    <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning" target="_blank">库存分拆</a>
+                  #{if Arrays.asList('DELIVERY','IN_STORAGE').contains(unit.stage.name())}
+                    <a href="@{ProcureUnits.splitUnit(unit.id, true)}" class="btn btn-small btn-warning" target="_blank">
+                    ${unit.stage.name()=='DELIVERY'?'采购分拆':'库存分拆'}</a>
                   #{/if}
               #{/power.ck}
           </div>
