--- a/core/app/views/Outbounds/blank.html
+++ b/core/app/views/Outbounds/blank.html
@@ -157,7 +157,7 @@
             <td>${unit.fba?.shipmentId}</td>
             <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
             <td>${unit.availableQty}</td>
-            <td>${unit.availableQty}</td>
+            <td>${unit.outQty}</td>
             <td>
               <input type="button" class="btn btn-mini btn-success" data-id="${unit.id}" name="editBoxInfo" value="填写">
             </td>
