物流运输单均价取值更改

--- a/core/app/views/Shipments/_paymentunits.html
+++ b/core/app/views/Shipments/_paymentunits.html
@@ -19,9 +19,9 @@
           <th class="span2">总价</th>
           <th class="span2">费用关系人</th>
           <th class="span3">备注</th>
-          <th>申请人</th>
-          <th class="span2">申请时间</th>
-          <th class="span3"></th>
+          <th width="60px;">申请人</th>
+          <th width="140px;">申请时间</th>
+          <th width="180px;"></th>
         </tr>
       #{list items:ship.fees, as:'fee'}
         <tr id='fee_${fee.id}'>
