--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -220,7 +220,9 @@
           <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
           <td>
               #{if unit.result}
-                <a href="@{Inbounds.editByUnitId(unit.id)}" target="_blank">${unit.result.label()}</a>
+                <a href="@{Inbounds.editByUnitId(unit.id)}" target="_blank">
+                  ${unit.result.name()=='UnCheck'? '未检' : '已检'}
+                </a>
               #{/if}
           </td>
           <td>
