--- a/core/app/views/StockRecords/stockIndex.html
+++ b/core/app/views/StockRecords/stockIndex.html
@@ -55,6 +55,7 @@
         <th width="60px;">入库数</th>
         <th width="60px;">可用库存</th>
         <th width="60px;">不良品数</th>
+        <th> 实际交货时间</th>
         <th width="120px;">FBA-ShipmentId</th>
         <th>项目名称</th>
         <th width="200px;">操作</th>
@@ -69,6 +70,7 @@
         <td>${u.inboundQty}</td>
         <td>${u.availableQty}</td>
         <td>${u.unqualifiedQty}</td>
+        <td>#{time_tooltip time:u.attrs.deliveryDate/}</td>
         <td>${u.fba?.shipmentId}</td>
         <td>${u.projectName}</td>
         <td>
