支付单页面 添加质检结果 字段

--- a/core/app/views/Payments/show.html
+++ b/core/app/views/Payments/show.html
@@ -5,7 +5,11 @@
     #{script  'component/dropUpload.coffee'/}
     #{script  'payments/show.coffee'/}
 #{/set}
-
+<style>
+  .table td{
+    vertical-align:middle;
+  }
+</style>
 #{flash_alert /}
 
 #{if payment.pApply}
