支付单页面 添加质检结果 字段

--- a/core/app/views/Payments/_procreApply.html
+++ b/core/app/views/Payments/_procreApply.html
@@ -52,7 +52,7 @@
           <td>${payment.currency.symbol()} ${fee.fixValue}</td>
           <td>${payment.currency.symbol()} ${fee.amount()}</td>
           <td>${fee.payee.username}</td>
-          <td>${punit.result?.laber()}</td>
+          <td>${punit.result?.label()}</td>
           <td>
             <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
               #{power.ck 'paymentunits.deny'}
