--- a/core/app/views/Payments/_transportApply.html
+++ b/core/app/views/Payments/_transportApply.html
@@ -35,7 +35,7 @@
       <td>${fee.unitQty}</td>
       <td>${helper.Currency.CNY.symbol()} ${fee.averagePrice()}</td>
       <td>${fee.amount()}</td>
-      <td>${fee.procureUnit?.result?.laber()}</td>
+      <td>${fee.procureUnit?.result?.label()}</td>
       <td>
         <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
       </td>
