库存分拆报错

--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -21,7 +21,15 @@
       <dd>#{time_tooltip time: apply.createdAt, datetime: true/}</dd>
     </dl>
   </div>
-  <div class="span4">
+  <div class="span2">
+    <dl class="dl-horizontal">
+      <dt>总数量</dt>
+      <dd>1000</dd>
+      <dt>总金额</dt>
+      <dd>1000</dd>
+    </dl>
+  </div>
+  <div class="span2">
     <div class="btn-toolbar">
     #{if apply.confirm}
       <button class="btn btn-danger" disabled="">请款单已经确认</button>
