添加整个请款单的数量和金额的汇总（应付总金额和总数量，跟有无请款无关）

--- a/core/app/views/Applys/procure.html
+++ b/core/app/views/Applys/procure.html
@@ -21,12 +21,12 @@
       <dd>#{time_tooltip time: apply.createdAt, datetime: true/}</dd>
     </dl>
   </div>
-  <div class="span2">
+  <div class="span4">
     <dl class="dl-horizontal">
       <dt>总数量</dt>
-      <dd>1000</dd>
+      <dd><span class="totalQty"></span></dd>
       <dt>总金额</dt>
-      <dd>1000</dd>
+      <dd><span class="totalCost"></span></dd>
     </dl>
   </div>
   <div class="span2">
