--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-<!-- 请款信息 -->
+  <!-- 请款信息 -->
 #{render './_paymentunits.html', ship: ship, feeTypes: feeTypes, cooperators: cooperators, isExpress: ship.type ==
 models.procure.Shipment.T.EXPRESS/}
 
@@ -88,5 +88,14 @@ models.procure.Shipment.T.EXPRESS/}
       <ul class="thumbnails uploaded"></ul>
       <div class="message" style="height:150px;padding-top:145px;text-align:center;">Drag & Drop</div>
     </div>
+  </div>
+</div>
+
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+  <div class="modal-body">
+    <div id="refresh_div"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
   </div>
 </div>
