增加批量修改包装信息功能

--- a/core/app/views/Inbounds/_units.html
+++ b/core/app/views/Inbounds/_units.html
@@ -3,7 +3,7 @@
   #{if !is_check}
     <th>
       <label class="checkbox">
-        <input type="checkbox" id="checkbox_all" class="checkall">
+        <input type="checkbox" id="checkbox_all" class="checkall" value="">
       </label>
     </th>
   #{/if}
