--- a/core/app/views/Inbounds/blank.html
+++ b/core/app/views/Inbounds/blank.html
@@ -47,13 +47,8 @@
       <tr>
         <th>收货日期<span style="color:red">*</span></th>
         <td><input type="date" name="inbound.receiveDate" required></td>
-        <th>B2B选项</th>
-        <td>
-          <label class="checkbox inline">
-            <input type="checkbox" name="inbound.isb2b" value="true" #{if proUnit.projectName=='B2B'} checked #{/if}>
-            B2B
-          </label>
-        </td>
+        <th></th>
+        <td></td>
       </tr>
       <tr>
         <th>创建日期</th>
@@ -92,12 +87,10 @@
         <th>预计交货时间</th>
         <th>预计运输时间</th>
         <th>计划交货数量</th>
-        <th>实际交货数量</th>
-        <th>交货不足处理方式</th>
-        <th>包装信息</th>
         <th>FBA-ShipmentId</th>
         <th>去往仓库</th>
         <th>运输方式</th>
+        <th>项目名称</th>
         <th>阶段</th>
       </tr>
         #{list items:units, as:'unit'}
@@ -115,21 +108,11 @@
             <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
             <td>#{time_tooltip time:unit.attrs.planShipDate /}</td>
             <td>${planQty}</td>
-            <td>
-              <input type="text" name="dtos[${unit_index-1}].qty" value="${planQty}" data-qty="${planQty}"
-                     style="width:55px;" #{if it.name()=='Machining'} readonly #{/if}/>
-            </td>
-            <td>
-              <select name="dtos[${unit_index-1}].handType" style="width:120px;display:none;">
-                  #{list items:models.whouse.InboundUnit.H, as:'h'}
-                    <option value="${h.name()}">${h.label()}</option>
-                  #{/list}
-              </select>
-            </td>
-            <td></td>
+
             <td>${unit.fba?.shipmentId}</td>
             <td>${unit.whouse?.name()}</td>
             <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
+            <td>${unit.projectName}</td>
             <td style="background-color:${unit.stage?.rgb()}">${unit.stage?.label()}</td>
           </tr>
         #{/list}
