--- a/core/app/views/DeliverPlans/indexWhouse.html
+++ b/core/app/views/DeliverPlans/indexWhouse.html
@@ -31,18 +31,27 @@
         #{/list}
     </select>
 
+    <label class="checkbox inline">
+      <input type="checkbox" name="p.showAll" value="true" ${p.showAll ? 'checked' : ''}>显示已收货
+    </label>
+
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
       <input type="text" name="p.search" class="input-medium" value="${p.search}" placeHolder="搜索 id 自动识别, +N 语法">
       <input type="hidden" name="p.page" value="${p.page}">
       <button class="btn btn-primary" data-loading>搜索</button>
     </div>
+
+    <div class="input-prepend input-append inline">
+      <input type="button" data-url="@{Inbounds.createByPlanId()}" class="btn btn-warning" id="batchReceiveBtn" value="收货">
+    </div>
   </div>
+
 </div>
 
 <div class="row-fluid">
   <div class="span12">
-    <table class="table table-condensed table-bordered">
+    <table class="table table-condensed table-bordered" id="data_table">
       <tr>
         <th width="100px;">出货单ID</th>
         <th width="30%;">Name</th>
@@ -59,7 +68,7 @@
             <td style="cursor:pointer;" data-toggle="toggle" data-target="#dp_${dp_index}">
               <span><i class="icon-reorder"></i></span>
               <span>${dp.name}</span>
-              <span class="badge badge-info">${dp.units.size()}</span>
+              <span class="badge badge-info">${dp.showNum(p.showAll)}</span>
             </td>
             <td>${dp.supplier()?.name}</td>
             <td>#{time_tooltip time:dp.createDate/}</td>
@@ -72,7 +81,7 @@
           <tr id="dp_${dp_index}" style="display:none;">
             <td colspan="12">
               <div>
-                  #{render 'ProcureUnits/_unit_list.html', relationPage:true, units:dp.units, norecord: true,
+                  #{render 'ProcureUnits/_unit_list.html', relationPage:true, units:dp.showUnits(p.showAll), norecord: true,
                   deliveryplan:true, dpIndex:"dp_"+dp_index /}
               </div>
             </td>
