--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -134,7 +134,7 @@
           </td>
         </tr>
       </table>
-      <input type="hidden" name="type" value="${type}">
+      <input type="hidden" name="type" id="splitType" value="${type}">
     </form>
   </div>
 </div>
